# cd2bel

./: .gitignore  README.md  pyproject.toml
src/cd2bel/: core.py  core.py.save  neo4j.py  utils.py
tests/: ad.bel  ad_for_pybel.bel  hgnc-20190708.belns  prepare_ad_file.sh  rgd-rat-genes-20190128.belns  test.bel  test.bel.cx.json  test.bel.json  test.bel.nodelink.json  test.py
