[project]
name = "cd2bel"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Adrien Rougny", email = "adrienrougny@gmail.com"},
]
dependencies = [
    "momapy @ git+https://github.com/adrienrougny/momapy.git@commute",
]
requires-python = "<=3.11,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../momapy_bel#egg=momapy-bel",
]
