[project]
name = "cd2bel"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Adrien Rougny", email = "adrienrougny@gmail.com"},
]
dependencies = [
    "libChEBIpy>=1.0.10"
]
requires-python = ">=3.11, <=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///home/rougny/code/momapy_bel#egg=momapy-bel",
    "-e file:///home/rougny/code/momapy#egg=momapy",
]

[dependency-groups]
dev = [
    "ebel @ git+http://github.com/e-bel/ebel.git@neo4j",
]
